tests/dataset/tpc-ds/compiler/c/q8.error
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c: In function ‘test_TPCDS_Q8_result’:
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:243:46: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  243 |   if (test_TPCDS_Q8_result_result.len != tmp1.len) {
      |                                              ^
      |                                              ->
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:247:55: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  247 |       if (test_TPCDS_Q8_result_result.data[i3] != tmp1.data[i3]) {
      |                                                       ^
      |                                                       ->
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:277:3: warning: implicit declaration of function ‘reverse’ [-Wimplicit-function-declaration]
  277 |   reverse(substr("zip", 0, 2));
      |   ^~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:277:11: warning: implicit declaration of function ‘substr’; did you mean ‘strstr’? [-Wimplicit-function-declaration]
  277 |   reverse(substr("zip", 0, 2));
      |           ^~~~~~
      |           strstr
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:280:7: error: conflicting types for ‘zip_list’; have ‘int’
  280 |   int zip_list = zip_list;
      |       ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:278:15: note: previous definition of ‘zip_list’ with type ‘list_string’
  278 |   list_string zip_list = list_string_create(1);
      |               ^~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:290:20: warning: passing argument 1 of ‘_json_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
  290 |     _json_string(it.s_store_name);
      |                  ~~^~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:64:32: note: expected ‘char *’ but argument is of type ‘const char *’
   64 | static void _json_string(char *s) { printf("\"%s\"", s); }
      |                          ~~~~~~^
/tmp/TestCCompiler_TPCDS_Goldenq82386071935/001/prog.c:298:33: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  298 |   test_TPCDS_Q8_result_result = result;
      |                                 ^~~~~~
